--- a/inst/app/www/text.css
+++ b/inst/app/www/text.css
@@ -2,45 +2,42 @@ body {
   font-family: 'Open Sans';
 }
 
-
-h1, h2, h3{
-  margin-bottom: 4px;
-}
-
 h1 {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 20pt;
+  font-size: 18pt;
   color: #2e4793;
+  margin-bottom: 8px;
 }
 
 h2 {
   font-weight: bold;
-  font-size: 16pt;
-}
-
-h3 {
-  font-weight: bold;
-  font-style: italic;
-  font-size: 15pt;
-}
-
-h3 {
-  font-weight: bold;
-  font-style: italic;
   font-size: 14pt;
-  margin-bottom: 0px;
+  margin-bottom: 4px;
+}
+
+h3 {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 13pt;
 }
 
 h4 {
   font-weight: 600;
   font-style: italic;
-  font-size: 12pt;
+  font-size: 11pt;
+}
+
+h3, h4{
   margin-bottom: 0px;
 }
 
+p, span {
+  font-size: 11pt;
+}
+
 p + h1 {
-  margin-top: 16px; /* Add top margin to headings after a paragraph */
+  margin-top: 20px; /* Add top margin to headings after a paragraph */
 }
 
 p + h2,
