making a slightly round header and footer with some margin added around

--- a/inst/app/www/layout.css
+++ b/inst/app/www/layout.css
@@ -31,4 +31,8 @@
   font-style: italic;
   font-size: 12px;
   padding: 3px;
+  border-radius: 5px;
+  margin-left: 3px;
+  margin-right: 3px;
+  margin-bottom: 3px;
 }
